<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  *
  ~  *  * Copyright (c) 2024 Mindful (https://github.com/akaMrNagar/Mindful)
  ~  *  * Author : Pawan Nagar (https://github.com/akaMrNagar)
  ~  *  *
  ~  *  * This source code is licensed under the GPL-2.0 license license found in the
  ~  *  * LICENSE file in the root directory of this source tree.
  ~  *
  ~  */
  -->

<resources>
    <!-- app values -->
    <string name="app_name" translatable="false">Mindful</string>
    <string name="accessibility_description">The Mindful app uses accessibility services to block
        websites and short-form content on apps. It checks URLs and content against your blocklist
        and prevents access to help you stay focused. \n\n⚠️Note: Your privacy is our priority.
        Mindful is 100% secure and works offline. We do not collect or store any personal data. </string>
    <string name="admin_description">Mindful does not collect, store, or transmit any user data. As
        Free and Open Source Software (FOSS), you can review and modify the source code.
        Administrative privileges are required solely for essential system operations, ensuring the
        app functions correctly without compromising your privacy.</string>
    <string name="toast_enable_notification">Please enable notification</string>
    <string name="toast_blocked_content">Content blocked! going back</string>
    <string name="toast_redirecting">Filtering search results</string>
    <string name="service_running_notification_title">Mindful is running</string>

    <!-- usage widget values = usage home widget for android -->
    <string name="usage_widget_description">Get a daily view of your screen and data usage</string>
    <string name="widget_screen_time_usage" translatable="false">12h 43m</string>
    <string name="widget_screen_time_label">Screen time</string>
    <string name="widget_mobile_data_label">Mobile</string>
    <string name="widget_mobile_data_usage" translatable="false">1.53 GB</string>
    <string name="widget_wifi_data_label">Wifi</string>
    <string name="widget_wifi_data_usage" translatable="false">6.56 GB</string>

    <!-- app blocker service = service for tracking app usage and launched  -->
    <string name="app_blocker_running_notification_info">Mindful is now tracking app usage to help
        you stay focused and manage your digital habits.</string>
    <!--
        placeholder in app_pause_notification_title will be the left limit
        Example output: "20 minutes left"
    -->
    <string name="app_pause_notification_title" formatted="true">"%s left"</string>
    <!--
        placeholder in app_pause_alert_notification_info will be 'AppName'
        Example output: "Instagram will be paused for the rest of the day"
    -->
    <string name="app_pause_alert_notification_info" formatted="true">"%s will be paused for the
        rest of the day"</string>

    <!-- app paused overlay dialog service = dialog shown when pause app is launched  -->
    <string name="overlay_permission_denied_notification_title">Permission denied</string>
    <string name="overlay_permission_denied_notification_info">Please grant display overlay
        permission to Mindful by clicking on the notification. On the next screen, find Mindful in
        the list of apps and click on allow.</string>

    <string name="app_paused_dialog_info_for_focus_session">It\'s focus time! This app is paused to
        help you stay on track and make the most of your session.</string>
    <string name="app_paused_dialog_info_for_bedtime">It\'s bedtime! This app is paused for the
        night to help you unwind and prepare for a peaceful sleep.</string>
    <string name="app_paused_dialog_info_for_app_timer_left">You\’ve been using this app for a while
        now. Let\’s shift gears and take a break from the screen and focus on something productive.</string>
    <string name="app_paused_dialog_info_for_launch_count_out">You\'ve reached the maximum number of
        launches for this app today. It\'s time to step away and refocus on your priorities.</string>
    <string name="app_paused_dialog_info_for_active_period_over">Access to this app is currently
        paused because it’s outside your set active hours. Take this time to focus on what matters
        most, and check back during the allowed time.</string>
    <string name="app_paused_dialog_info_for_app_timer_out">You\'ve hit your daily limit on this
        app. Embrace this opportunity to supercharge your productivity.</string>

    <!--  restriction groups related dialog infos the placeholder in these will be the name of the
    associated group  -->
    <string name="app_paused_dialog_info_for_group_timer_left" formatted="true">You\’ve been using
        apps from the “%s” group for a while now. It\’s time to take a step back and concentrate on
        your tasks, not your screen.</string>
    <string name="group_paused_dialog_info_for_active_period_over" formatted="true"> Apps in the
        “%s” group are currently paused as it’s outside your set active hours. Use this opportunity
        to recharge or focus on your tasks, and return during the designated time.</string>
    <string name="app_paused_dialog_info_for_group_timer_out" formatted="true">You\’ve reached the
        total time limit for the “%s” group today. Take a break and recharge your focus.</string>


    <!-- placeholder in app_paused_dialog_progress_spent will be time formatted string like '4h 13m'
    for 4 minutes 13 seconds -->
    <string name="app_paused_dialog_progress_spent" formatted="true">"%s spent"</string>
    <!-- placeholder in app_paused_dialog_progress_left will be time formatted string like '4h 13m'
    for 4 minutes 13 seconds -->
    <string name="app_paused_dialog_progress_left" formatted="true">"%s left"</string>

    <string name="app_paused_dialog_button_emergency">Emergency</string>
    <string name="app_paused_dialog_button_use_anyway">Use anyway</string>
    <string name="app_paused_dialog_button_close_app">Close app</string>

    <!-- bedtime = scheduled bedtime alert notification -->
    <string name="bedtime_upcoming_notification_info">Bedtime starts in 30 minutes. Use this time to
        wrap up and get ready for a fresh start tomorrow</string>
    <string name="bedtime_started_notification_info">It\'s time to wind down. Bedtime routine has
        started, helping you relax and prepare for a restful night\'s sleep.</string>
    <string name="bedtime_ended_notification_info">Rise and shine! Bedtime routine has ended, get
        ready to start the day energized and refreshed.</string>

    <!-- emergency pause service = when user uses emergency pass -->
    <string name="emergency_pause_notification_title">Emergency Pause</string>
    <!--
       placeholder in emergency_pause_notification_info will be time formatted string like '4:13' for 4
    minutes 13 seconds
       time will not exceed 5 minutes
       Example output: "App blocker will resume after 3:15"
    -->
    <string name="emergency_pause_notification_info" formatted="true">"App blocker will resume after
        %s"</string>
    <string name="emergency_pause_ended_notification_info">Emergency pause is over, and app blocker
        is back in action. Distractions are now blocked again, stay focused!</string>

    <!-- focus session service = service responsible for ongoing focus session -->
    <string name="focus_session_notification_title">Focus Session</string>
    <!--
       placeholder in focus_session_notification_info will be time formatted string like '1:15:13' for 1
    hour 15 minutes 13 seconds
       time can be in hours or just minutes either way seconds will be suffixed
       Example output: "Focus session will end in 1h 3m 15s"  for 1 hour 3 minutes and 15 seconds
       Example output: "Focus session will end in 45m 15s"  for 45 minutes and 15 seconds
    -->
    <string name="focus_session_notification_info" formatted="true">"Focus session will end in %s"</string>
    <string name="focus_session_infinite_notification_info" formatted="true">You\'ve been focused
        for %s</string>

    <string name="focus_session_success_notification_info">Congratulations! You’ve successfully
        completed your focus session. Great job staying on track! Keep up the amazing work!</string>
    <string name="focus_session_giveup_notification_info">You gave up! Don\'t worry, you can do
        better next time. Every effort counts - just keep going</string>

    <!-- internet blocker service = service for blocking specific app's internet -->
    <string name="internet_blocker_running_notification_info">Mindful is now managing internet
        access to help you stay focused.</string>

    <!--  Placeholder will be the number of batched notifications -->
    <string name="notification_schedule_notification_info" formatted="true">
        You have %d notifications while you were away. They will be cleared automatically after 24
        hours.
    </string>
</resources>