<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  *
  ~  *  * Copyright (c) 2024 Mindful (https://github.com/akaMrNagar/Mindful)
  ~  *  * Author : Pawan Nagar (https://github.com/akaMrNagar)
  ~  *  *
  ~  *  * This source code is licensed under the GPL-2.0 license license found in the
  ~  *  * LICENSE file in the root directory of this source tree.
  ~  *
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_container"
    android:backgroundTint="@color/surface"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- App icon and name  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <!-- icon -->
        <ImageView
            android:id="@+id/overlay_dialog_app_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <!-- app name -->
        <TextView
            android:id="@+id/overlay_dialog_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:text="@string/app_name"
            android:textColor="@color/textSecondary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>


    <!-- Alert text   -->
    <TextView
        android:id="@+id/overlay_dialog_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_paused_dialog_info_for_app_timer_out"
        android:textColor="@color/textPrimary"
        android:textSize="16sp" />

    <!-- Progress bar -->
    <ProgressBar
        android:id="@+id/overlay_dialog_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:indeterminate="false"
        android:minHeight="24dp"
        android:max="100"
        android:progress="20"
        android:progressDrawable="@drawable/progress_bar"
        android:visibility="gone" />

    <!-- used and remaining limit    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:layout_marginTop="8dp">
        <!-- Limit spent -->
        <TextView
            android:id="@+id/overlay_dialog_limit_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_paused_dialog_progress_spent"
            android:textColor="@color/textSecondary"
            android:textSize="14sp"
            android:visibility="gone" />

        <!-- Limit left -->
        <TextView
            android:id="@+id/overlay_dialog_limit_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/app_paused_dialog_progress_left"
            android:textColor="@color/textSecondary"
            android:textSize="14sp"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>


    <!--  Action buttons  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="right"
        tools:ignore="RtlHardcoded">

        <!-- Emergency button -->
        <Button
            android:id="@+id/overlay_dialog_button_emergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="14dp"
            android:text="@string/app_paused_dialog_button_emergency"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            android:textSize="14sp"
            android:visibility="gone" />

        <!-- Use anyway button -->
        <Button
            android:id="@+id/overlay_dialog_button_use_anyway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="14dp"
            android:text="@string/app_paused_dialog_button_use_anyway"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            android:textSize="14sp"
            android:visibility="gone" />

        <!-- Close button -->
        <Button
            android:id="@+id/overlay_dialog_button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="14dp"
            android:text="@string/app_paused_dialog_button_close_app"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            android:textSize="14sp" />


    </LinearLayout>
</LinearLayout>
