<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widgetRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <!--   Usage layer     -->
    <LinearLayout
        style="@style/Widget.Android.AppWidget.Container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:theme="@style/Theme.Android.AppWidgetContainer">

        <!-- Screen Usage -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_screen_time_label"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/total_screen_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="36sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeTextType="uniform"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="2h 30m"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,UnusedAttribute" />


        <!-- Network Usage -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <!-- Mobile Usage -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_mobile_data_label"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/total_mobile_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="210 mb"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,UnusedAttribute" />
            </LinearLayout>


            <!-- Wifi Usage -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_wifi_data_label"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/total_wifi_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="5.45 gb"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,UnusedAttribute" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!--    Refresh icon layer  -->
    <ImageButton
        android:id="@+id/widgetRefreshButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="top|end"
        android:background="@drawable/shape_circular"
        android:contentDescription="@string/app_name"
        android:hapticFeedbackEnabled="true"
        android:src="@drawable/ic_refresh"
        android:theme="@style/Theme.Android.AppWidgetContainer" />

</FrameLayout>